# jit-sudo

./: .gitignore  CONFIGURATION.md  INSTALL.md  Makefile  PRODUCTION_SECURITY_CHECKLIST.md  README.md  README.md.backup  SECURITY_AUDIT.md  admin-approval-system.rs  config-development.toml  config-high-security.toml  config-production.toml  config-system.rs  config-yaml-example.yaml  demo_complete_workflow.sh  github-actions-build.yml  jit-sudo.spec  jwt-security-fix.rs  storage-encryption-fix.rs  test_ttl.sh
debian/: conffiles  control  postinst  postrm  prerm
jit-approval-plugin/: Makefile  jit_approval.c
libjit-sudo/: Cargo.toml
libjit-sudo/src/: audit.rs  ffi.rs  grant.rs  lib.rs  policy.rs
